add_subdirectory(address_spaces)
add_subdirectory(api)
add_subdirectory(atomics)
add_subdirectory(attributes)
add_subdirectory(common_funcs)
add_subdirectory(convert)
add_subdirectory(device_queue)
add_subdirectory(geometric_funcs)
add_subdirectory(images)
add_subdirectory(integer_funcs)
add_subdirectory(math_funcs)
add_subdirectory(pipes)
add_subdirectory(program_scope_ctors_dtors)
add_subdirectory(reinterpret)
add_subdirectory(relational_funcs)
add_subdirectory(spec_constants)
add_subdirectory(subgroups)
add_subdirectory(synchronization)
add_subdirectory(vload_vstore)
add_subdirectory(workgroups)
add_subdirectory(workitems)
